[package]
name = "dist"
version = "1.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
nostr-sdk = "0.43.0"
directories = "5.0.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "io-std", "io-util"] }
